sepd-5540 standardize checkbox spacing and target horizontal radio-group

--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -134,6 +134,7 @@
   &.horizontal {
     display: flex;
     flex-direction: column;
+    row-gap: $spacing-200;
 
     label {
       padding: $spacing-400;
