--- a/blocks/form/components/typeahead/typeahead.scss
+++ b/blocks/form/components/typeahead/typeahead.scss
@@ -1,30 +1,34 @@
 @use '../../../../styles/settings' as *;
 @use '../../../../styles/components/suggestions' as *;
 
-.typeahead__input {
-  position: relative;
+.typeahead {
+  margin-top: $spacing-600;
 
-  input[type='text'] {
-    padding-right: 48px; // Extra padding so text not overlapping with icon
-    width: 100%;
-  }
+  .typeahead__input {
+    position: relative;
 
-  &::after {
-    content: url('../../../../icons/icon-search.svg');
-    display: block;
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    right: 16px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+    input[type='text'] {
+      padding-right: 48px; // Extra padding so text not overlapping with icon
+      width: 100%;
+    }
 
-  .suggestions {
-    @extend %suggestions;
-  }
+    &::after {
+      content: url('../../../../icons/icon-search.svg');
+      display: block;
+      width: 24px;
+      height: 24px;
+      position: absolute;
+      right: 16px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
 
-  .suggestion {
-    @extend %suggestion;
+    .suggestions {
+      @extend %suggestions;
+    }
+
+    .suggestion {
+      @extend %suggestion;
+    }
   }
 }
