sepd-5540 update row-gap between radio button boxes - use gap not top margin

--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -122,6 +122,7 @@
   &.horizontal {
     display: flex;
     flex-direction: column;
+    row-gap: $spacing-200;
 
     label {
       padding: $spacing-400;
