--- a/tools/_dev-grid.scss
+++ b/tools/_dev-grid.scss
@@ -1,3 +1,15 @@
+body::before {
+  content: "✅ dev-grid loaded";
+  position: fixed;
+  top: 1rem;
+  left: 1rem;
+  background: lime;
+  color: black;
+  padding: 0.5rem;
+  z-index: 9999;
+}
+
+
 .main.show-grid {
   [class*="col-"] {
     @for $i from 1 through 12 {
