--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,5 +3,9 @@
 @use './forms';
 // Components
 @use './components';
-@use 'tools/dev-grid';
+
+@use '../tools/dev-grid';
+
+@include dev-grid.show-grid-overlay;
+
 
