feat(form): hide progress bar on step 0

--- a/blocks/form/components/wizard/_progress-bar.scss
+++ b/blocks/form/components/wizard/_progress-bar.scss
@@ -10,6 +10,10 @@
   bottom: 210px;
 }
 
+.progress-bar--is-hidden {
+  display: none;
+}
+
 .progress-bar__item {
   content: '';
   background-color: $color-primary;
