--- a/blocks/form/components/formoutputfield/formoutputfield.css
+++ b/blocks/form/components/formoutputfield/formoutputfield.css
@@ -1,3 +1,3 @@
-fieldset.field-formoutputfield{background-color:yellow}fieldset.field-formoutputfield > legend{display:none}
+.field-formoutputfield{background:#e6f2fa}.field-formoutputfield > legend{display:none}
 
 /*# sourceMappingURL=formoutputfield.css.map */
