--- a/blocks/link-with-icon/link-with-icon.css
+++ b/blocks/link-with-icon/link-with-icon.css
@@ -1,3 +1,3 @@
-.link-with-icon > div:nth-child(3){display:none}
+.link-with-icon.no-icon .icon{display:none}.link-with-icon > div:nth-child(3){display:none}
 
 /*# sourceMappingURL=link-with-icon.css.map */
