fix(SEPD-4830): adjusting top spacing for section intro - section intro is middle aligned

--- a/blocks/form/components/wizard/_wizard-intro.scss
+++ b/blocks/form/components/wizard/_wizard-intro.scss
@@ -73,19 +73,25 @@
 }
 
 .section-intro {
-  padding-top: $spacing-600;
-  padding-left: 16px;
-  padding-right: 16px;
+  height: $wizard-body-height;
+  min-height: $wizard-body-height;
+  padding: $spacing-600 16px 120px; // more spacing at the bottom to be able to scroll through past the last content
   color: $text-primary;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   @include media('tablet') {
+    height: $wizard-body-height-tablet;
+    min-height: $wizard-body-height-tablet;
     padding-top: $spacing-700;
     padding-left: 0;
     padding-right: 0;
   }
 
   @include media('desktop') {
-    padding-top: 96px;
+    height: $wizard-body-height-desktop;
+    min-height: $wizard-body-height-desktop;
   }
 
   picture {
