feat(progress bar): cosmetic & footer state when the jouney begin

--- a/styles/settings/_elements.scss
+++ b/styles/settings/_elements.scss
@@ -17,14 +17,17 @@ $nav-padding-top-desktop: $spacing-450 + $spacing-450;
 $nav-padding-bottom-desktop: $spacing-450 + $spacing-400;
 
 $footer-inner: 56px;
+$footer-inner-progress-start: 104px;
 $footer-padding-top: $spacing-400;
 $footer-padding-bottom: $spacing-500;
 
 $footer-inner-tablet: 57px;
+$footer-inner-tablet-progress-start: 106px;
 $footer-padding-top-tablet: $spacing-450;
 $footer-padding-bottom-tablet: $spacing-600;
 
 $footer-inner-desktop: 59px;
+$footer-inner-desktop-progress-start: 119px;
 $footer-padding-top-desktop: $spacing-450;
 $footer-padding-bottom-desktop: $spacing-600;
 
@@ -43,6 +46,18 @@ $footer-height-tablet: (
 );
 $footer-height-desktop: (
   $footer-inner-desktop + $footer-padding-top-desktop +
+    $footer-padding-bottom-desktop
+);
+
+$footer-height-progress-start: (
+  $footer-inner-progress-start + $footer-padding-top + $footer-padding-bottom
+);
+$footer-height-tablet-progress-start: (
+  $footer-inner-tablet-progress-start + $footer-padding-top-tablet +
+    $footer-padding-bottom-tablet
+);
+$footer-height-desktop-progress-start: (
+  $footer-inner-desktop-progress-start + $footer-padding-top-desktop +
     $footer-padding-bottom-desktop
 );
 
