--- a/blocks/form/components/wizard/_progress-bar.scss
+++ b/blocks/form/components/wizard/_progress-bar.scss
@@ -1,9 +1,9 @@
 @use '../../../../styles/settings' as *;
 
 .progress-bar {
-  padding: $spacing-400;
   width: 100%;
   border-radius: $border-radius-low;
+  grid-area: header;
 }
 
 .progress-bar--is-hidden {
@@ -30,4 +30,8 @@
   background-color: $color-primary;
   display: block;
   height: 6px;
+
+  @include media('desktop') {
+    height: 8px;
+  }
 }
